--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -252,6 +252,10 @@
   display: block;
 }
 
+.rotate-180 {
+  transform: rotate(180deg);
+}
+
 @import "dropzone/dist/dropzone.css";
 @import "tippy.js/dist/tippy.css";
 @import "tom-select/dist/css/tom-select.css";
