--- a/app/views/interpreters/appointments.html.erb
+++ b/app/views/interpreters/appointments.html.erb
@@ -8,34 +8,21 @@
         <div class="px-4 sm:px-6 lg:px-6">
         <div class="flex flex-wrap items-center">
           <div>
-            <div data-controller="dropdown" class="pr-3">
-              <button data-action="click->dropdown#toggle click@window->dropdown#hide touch->dropdown#toggle touch@window->dropdown#hide" role="button" class="inline-flex items-center select-none" aria-label="Sort By">
-                <p class="text-sm">Sort by</p>
-                <svg class="w-4 h-4 ml-2 text-gray-500" aria-hidden="true" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
-              </button>
-              <div data-dropdown-target="menu" class="hidden absolute z-10 bg-white divide-y divide-gray-100 rounded-lg shadow dark:bg-gray-700 dark:divide-gray-600 block">
-                <div class="overflow-hidden bg-white border border-gray-200 rounded shadow-md">
-                  <div data-interpreter-appointments-target="sort">
-                    <% @sort_by_filters.each do |sort| %>
-                      <div class="flex items-center p-2 rounded hover:bg-gray-100 dark:hover:bg-gray-600 py-3 px-3">
-                        <input name="sort_by" class="<%= dropdown_item_classes %>" type="checkbox" id="sort_<%= sort %>" value="<%= sort %>" data-action="change->interpreter-appointments#changed" data-sort-filter="<%= sort %>">
-                        <label class="form-check-label <%= label_classes %>" for="sort_<%= sort %>"><%= sort.titleize %></label>
-                      </div>
-                    <% end %>
-                  </div>
-                </div>
-              </div>
-            </div>
+            <button data-action="click->interpreter-appointments#sort" role="button" class="inline-flex items-center select-none" aria-label="Sort By">
+              <p class="text-sm">Sort</p>
+              <%= f.hidden_field :sort_by %>
+              <svg class="w-4 h-4 ml-2 text-gray-500 ease-in duration-2 00" id="sort-chevron" aria-hidden="true" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
+            </button>
           </div>
           <div class="ml-auto">
             <div class="flex flex-wrap items-center">
               <!-- Status-->
-              <div data-controller="dropdown" class="pr-3">
+              <div data-controller="dropdown" class="pr-3 relative">
                 <button data-action="click->dropdown#toggle click@window->dropdown#hide touch->dropdown#toggle touch@window->dropdown#hide" role="button" class="inline-flex items-center select-none" aria-label="Status">
                   <p class="text-sm capitalize" id="statusesTextContainer">Status</p>
                   <svg class="w-4 h-4 ml-2 text-gray-500" aria-hidden="true" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
                 </button>
-                <div data-dropdown-target="menu" class="hidden absolute z-10 bg-white divide-y divide-gray-100 rounded-lg shadow dark:bg-gray-700 dark:divide-gray-600 block">
+                <div data-dropdown-target="menu" class="hidden inline-flex top-6 absolute z-10 bg-white divide-y divide-gray-100 rounded-lg shadow dark:bg-gray-700 dark:divide-gray-600 block">
                   <div class="overflow-hidden bg-white border border-gray-200 rounded shadow-md">
                     <div data-interpreter-appointments-target="status">
                       <% @statuses.each do |status| %>
@@ -49,12 +36,12 @@
                 </div>
               </div>
               <!-- Modality-->
-              <div data-controller="dropdown" class="pr-3">
+              <div data-controller="dropdown" class="pr-3 relative">
                 <button data-action="click->dropdown#toggle click@window->dropdown#hide touch->dropdown#toggle touch@window->dropdown#hide" role="button" class="inline-flex items-center select-none" aria-label="Profile Menu">
                   <p class="text-sm" id="modalitiesTextContainer">Modality</p>
                   <svg class="w-4 h-4 ml-2 text-gray-500" aria-hidden="true" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
                 </button>
-                <div data-dropdown-target="menu" class="hidden absolute z-10 bg-white divide-y divide-gray-100 rounded-lg shadow dark:bg-gray-700 dark:divide-gray-600 block">
+                <div data-dropdown-target="menu" class="hidden inline-flex top-6 absolute z-10 bg-white divide-y divide-gray-100 rounded-lg shadow dark:bg-gray-700 dark:divide-gray-600 block">
                   <div class="overflow-hidden bg-white border border-gray-200 rounded shadow-md">
                     <div data-interpreter-appointments-target="modality">
                       <% @modalities.each do |modality| %>
