removing old pay bill rate paths

--- a/app/views/shared/_left_nav.html.erb
+++ b/app/views/shared/_left_nav.html.erb
@@ -2,7 +2,7 @@
 <%= nav_link_to "Sites", sites_path, class: "nav-link" %>
 <%= nav_link_to "Customers", customers_path, class: "nav-link" %>
 <%= nav_link_to "Specialties", specialties_path, class: "nav-link" %>
-<%= nav_link_to "Pay Bill Rates", pay_bill_rates_path, class: "nav-link" %>
+<%= nav_link_to "Pay Bill Rates", "#", class: "nav-link" %>
 <%= nav_link_to "Languages", languages_path, class: "nav-link" %><%= nav_link_to "Requestor Details", requestor_details_path, class: "nav-link" %>
 <%= nav_link_to "Agencies", agencies_path, class: "nav-link" %>
 <%= nav_link_to "Providers", providers_path, class: "nav-link" %>
