TK-267 : Updates : Table header sort & dropdown text overflow fix

--- a/app/views/interpreters/fetch_appointments.html.erb
+++ b/app/views/interpreters/fetch_appointments.html.erb
@@ -2,7 +2,13 @@
   <thead class="bg-gray-50">
     <tr>
       <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Appointment Number</th>
-      <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Date</th>
+      <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">
+        <button data-action="click->interpreter-appointments#sort" role="button" class="inline-flex items-center select-none" aria-label="Sort By">
+          <p class="text-sm">Date</p>
+          <%= hidden_field_tag :sort_by, params[:sort_by]%>
+          <svg class="w-4 h-4 ml-2 text-gray-500 ease-in duration-200 <%= params[:sort_by] == "date" ? "rotate-180" : "" %>" id="sort-chevron" aria-hidden="true" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
+        </button>
+      </th>
       <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Time</th>
       <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Language</th>
       <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Status</th>
