--- a/app/views/pay_rates/_form.html.erb
+++ b/app/views/pay_rates/_form.html.erb
@@ -1,73 +1,194 @@
-<%= form_with(model: pay_rate) do |form| %>
-  <%= render "shared/error_messages", resource: form.object %>
-
-  <div class="form-group">
-    <%= form.label :account_id %>
-    <%= form.text_field :account_id, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :name %>
-    <%= form.text_field :name, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :hourly_pay_rate %>
-    <%= form.text_field :hourly_pay_rate, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :is_active %>
-    <%= form.check_box :is_active, class: "form-checkbox" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :minimum_time_charged %>
-    <%= form.number_field :minimum_time_charged, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :after_hours_overage %>
-    <%= form.text_field :after_hours_overage, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :rush_overage %>
-    <%= form.text_field :rush_overage, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :cancel_rate %>
-    <%= form.text_field :cancel_rate, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :default_rate %>
-    <%= form.check_box :default_rate, class: "form-checkbox" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :in_person %>
-    <%= form.check_box :in_person, class: "form-checkbox" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :phone %>
-    <%= form.check_box :phone, class: "form-checkbox" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :video %>
-    <%= form.check_box :video, class: "form-checkbox" %>
-  </div>
 
   <div>
-    <%= form.button button_text(form.send(:submit_default_value)), class: "btn btn-primary" %>
+    <% form_url = pay_rate.new_record? ? pay_rates_path : bpay_rate_path(pay_rate) %>
+    <%= form_with(model: pay_rate, url: form_url) do |form| %>
+      <%= render "shared/error_messages", resource: form.object %>
 
-    <% if form.object.new_record? %>
-      <%= link_to t("cancel"), pay_rates_path, class: "btn btn-white" %>
-    <% else %>
-      <%= link_to t("cancel"), pay_rate_path(@pay_rate), class: "btn btn-white" %>
-    <% end %>
-  </div>
-<% end %>
+      <div class=" bg-white shadow sm:rounded-lg">
+        <div class="px-4 py-5 sm:px-6">
+        </div>
+        <div class="">
+          <dl class="sm:divide-y sm:divide-gray-200">
+            <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
+              <div class="mt-1 lg:col-span-1 sm:col-span-2 sm:mt-0">
+                <h3 class="text-base font-semibold leading-6 text-tokanisecondary-700">Name*</h3>
+                <dt class="text-sm font-medium text-gray-500">Descriptive Name for your Pay Rate</dt>  
+              </div>        
+              <div class="mt-1 pl-4 pr-4 text-sm text-gray-900 col-span-2 sm:mt-0 pl-0">
+                <%= form.hidden_field :account_id, value: current_account.id %>
+                <%= form.text_field :name, class: "mt-3 block w-full rounded-md border border-slate-400 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+              </div>
+            </div>
+            <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
+              <div class="mt-1 lg:col-span-1 sm:col-span-2 sm:mt-0">
+                <h3 class="text-base font-semibold leading-6 text-tokanisecondary-700">Hourly Pay Rate*</h3>
+                <dt class="text-sm font-medium text-gray-500">This is the amount each Interpreter is paid per hour for each appointment.</dt>
+              </div>
+              <div class="mt-1 pl-4 pr-4 lg:col-span-1 sm:col-span-2 sm:mt-0 pl-0">
+                <div class="relative flex h-10 w-full flex-row rounded-lg">  
+                 
+                 <%= form.text_field :hourly_pay_rate, class: "peer w-full rounded-l-lg border border-slate-400 px-2 text-slate-900 placeholder-slate-400 transition-colors duration-300 focus:border-tokanisecondary-400 focus:outline-none" %>
+                  <span class="flex  items-center rounded-r-lg border border-slate-400 bg-tokanisecondary-100 px-2 text-sm text-slate-500 transition-colors duration-300 peer-focus:border-tokanisecondary-400 peer-focus:bg-tokanisecondary-400 peer-focus:text-white" for="domain">$/Hr</span>
+                </div>
+              </div>
+            </div>
+            
+            <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
+              <div class="mt-1 lg:col-span-1 sm:col-span-2 sm:mt-0">
+                <h3 class="text-base font-semibold leading-6 text-tokanisecondary-700">Minimum Time Paid*</h3>
+                <dt class="text-sm font-medium text-gray-500">The minimum time (in minutes) that is paid for each appointment.  If you have no minimum requirement, enter 0.</dt>
+              </div>
+              <div class="mt-1 pl-4 pr-4 lg:col-span-1 sm:col-span-2 sm:mt-0 pl-0">
+                <div class="relative flex h-10 w-full flex-row rounded-lg">                      
+                  <%= form.text_field :minimum_time_charged, class: "peer w-full rounded-l-lg border border-slate-400 px-2 text-slate-900 placeholder-slate-400 transition-colors duration-300 focus:border-tokanisecondary-400 focus:outline-none" %>
+                  <span class="flex  items-center rounded-r-lg border border-slate-400 bg-tokanisecondary-100 px-2 text-sm text-slate-500 transition-colors duration-300 peer-focus:border-tokanisecondary-400 peer-focus:bg-tokanisecondary-400 peer-focus:text-white" for="domain">minutes</span>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
+              <div class="mt-1 lg:col-span-1 sm:col-span-2 sm:mt-0">
+                <h3 class="text-base font-semibold leading-6 text-tokanisecondary-700">After Hours</h3>
+                <dt class="text-sm font-medium text-gray-500">How much overage is paid for appointments outside of normal business hours. The times of the day that constitute after hours are set on the customer bill rate for the appointment.</dt>
+              </div>
+              <div class="mt-1 pl-4 pr-4 lg:col-span-2 sm:col-span-2 sm:mt-0 pl-0">
+               
+                <div class="flex h-10 flex-row w-64 rounded-lg mb-4">
+                  <%= form.text_field  :after_hours_overage, class: "peer w-full rounded-l-lg border border-slate-400 px-2 text-slate-900 placeholder-slate-400 transition-colors duration-300 focus:border-tokanisecondary-400 focus:outline-none" %>
+                  <span class="flex  items-center rounded-r-lg border border-slate-400 bg-tokanisecondary-100 px-2 text-sm text-slate-500 transition-colors duration-300 peer-focus:border-tokanisecondary-400 peer-focus:bg-tokanisecondary-400 peer-focus:text-white">$/Hr</span>
+                  
+                </div>
+              </div>
+            </div>
+            <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
+              <div class="mt-1 lg:col-span-1 sm:col-span-2 sm:mt-0">
+                <h3 class="text-base font-semibold leading-6 text-tokanisecondary-700">Rush Rate</h3>
+                <dt class="text-sm font-medium text-gray-500">How much overage is paid for appointments booked last minute. The timeframe that constitutes a rush appointment is set on the customer bill rate.</dt>
+              </div>
+              <div class="mt-1 pl-4 pr-4 lg:col-span-2 sm:col-span-2 sm:mt-0 pl-0">
+                <div class="flex h-10 flex-row rounded-lg mb-3">
+                  <div class=" flex h-10  flex-row rounded-lg">
+                    <%= form.text_field  :rush_overage, class: "peer w-full rounded-l-lg border border-slate-400 px-2 text-slate-900 placeholder-slate-400 transition-colors duration-300 focus:border-tokanisecondary-400 focus:outline-none" %>
+                    <span class="flex  items-center rounded-r-lg border border-slate-400 bg-tokanisecondary-100 px-2 text-sm text-slate-500 transition-colors duration-300 peer-focus:border-tokanisecondary-400 peer-focus:bg-tokanisecondary-400 peer-focus:text-white">$/Hr</span>
+                  </div>
+                  
+                </div>
+              </div>
+            </div>
+
+            <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
+              <div class="mt-1 lg:col-span-1 sm:col-span-2 sm:mt-0">
+                <h3 class="text-base font-semibold leading-6 text-tokanisecondary-700">Cancel Rate</h3>
+                <dt class="text-sm font-medium text-gray-500">How much is paid for appointments cancelled. The timeframe that would incur a cancel charge on an appointment is set on the customer bill rate.</dt>
+              </div>
+              <div class="mt-1 pl-4 pr-4 lg:col-span-2 sm:col-span-2 sm:mt-0 pl-0">
+                <div class="flex h-10 flex-row rounded-lg mb-3">
+                  <div class=" flex h-10  flex-row rounded-lg">
+                    <%= form.text_field  :cancel_rate, class: "peer w-full rounded-l-lg border border-slate-400 px-2 text-slate-900 placeholder-slate-400 transition-colors duration-300 focus:border-tokanisecondary-400 focus:outline-none" %>
+                    <span class="flex  items-center rounded-r-lg border border-slate-400 bg-tokanisecondary-100 px-2 text-sm text-slate-500 transition-colors duration-300 peer-focus:border-tokanisecondary-400 peer-focus:bg-tokanisecondary-400 peer-focus:text-white">$/Hr</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
+              <div class="mt-1 lg:col-span-1 sm:col-span-2 sm:mt-0">
+                <h3 class="text-base font-semibold leading-6 text-tokanisecondary-700">Modalities*</h3>
+                <dt class="text-sm font-medium text-gray-500">Check all appointment modalities that this pay rate applies to.</dt>
+              </div>
+              <div class="mt-1 pr-4 lg:col-span-2 sm:col-span-2 sm:mt-0 pl-0">
+                <fieldset class="space-y-2">
+                  <div class="relative flex ">
+                    <div class="flex h-5 items-center">
+                      <%= form.check_box :in_person, class:"h-4 w-4 m-4 rounded border-gray-300 text-tokanisecondary-400 focus:ring-tokanisecondary-400" %>
+                      <%= form.label :in_person, class:"font-medium text-gray-700 mr-3" %>
+                      <%= form.check_box :video, class:"h-4 w-4 m-4 rounded border-gray-300 text-tokanisecondary-400 focus:ring-tokanisecondary-400" %>
+                      <%= form.label :video, class:"font-medium text-gray-700 mr-3" %> 
+                      <%= form.check_box :phone, class:"h-4 w-4 m-4 rounded border-gray-300 text-tokanisecondary-400 focus:ring-tokanisecondary-400" %>
+                      <%= form.label :phone, class:"font-medium text-gray-700 mr-3" %>
+                    </div>
+                  </div>
+                  
+                </fieldset>
+              </div>
+            </div>
+
+            <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
+              <div class="mt-1 lg:col-span-1 sm:col-span-2 sm:mt-0">
+                <h3 class="text-base font-semibold leading-6 text-tokanisecondary-700">Default Rate*</h3>
+                <dt class="text-sm font-medium text-gray-500">Check to make this the default pay rate for the modalities selected.</dt>
+              </div>
+              <div class="mt-1 pr-4 lg:col-span-2 sm:col-span-2 sm:mt-0 pl-0">
+                <fieldset class="space-y-2">
+                  <div class="relative flex ">
+                    <div class="flex h-5 items-center">
+                      <div class="flex h-5 items-center">
+                        <%= form.check_box :default_rate, class:"h-4 w-4 m-4 rounded border-gray-300 text-tokanisecondary-400 focus:ring-tokanisecondary-400" %>
+                        <%= form.label :is_default, class:"font-medium text-gray-700 mr-3" %>
+                      </div>
+                    </div>
+                  </div>  
+                </fieldset>
+              </div>
+            </div>
+
+            <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
+              <div class="mt-1 lg:col-span-1 sm:col-span-2 sm:mt-0">
+                <h3 class="text-base font-semibold leading-6 text-tokanisecondary-700">Active Status*</h3>
+                <dt class="text-sm font-medium text-gray-500">Make this rate active to have it apply to payment calculations.</dt>
+              </div>
+              <div class="mt-1 pr-4 lg:col-span-2 sm:col-span-2 sm:mt-0 pl-0">
+                <fieldset class="space-y-2">
+                  <div class="relative flex ">
+                    <div class="flex h-5 items-center">
+                      <div class="flex h-5 items-center">
+                        <%= form.check_box :is_active, class:"h-4 w-4 m-4 rounded border-gray-300 text-tokanisecondary-400 focus:ring-tokanisecondary-400" %>
+                        <%= form.label :is_active, class:"font-medium text-gray-700 mr-3" %>
+                      </div>
+                    </div>
+                  </div>
+                </fieldset>
+              </div>
+            </div>
+
+            <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
+              <div class="mt-1 lg:col-span-1 sm:col-span-2 sm:mt-0">
+                <h3 class="text-base font-semibold leading-6 text-tokanisecondary-700">Langugage Specific Rate*</h3>
+                <dt class="text-sm font-medium text-gray-500">If your rate is not a defaulat rate, please select which languges it will apply to.</dt>
+              </div>
+              <div class="mt-1 pr-4 lg:col-span-2 sm:col-span-2 sm:mt-0 pl-0">
+                <div data-controller="multiselect" data-multiselect-items-value='<%= @languages_json %>' data-placeholder="Select Languages for this Pay Rate" class="">
+                  <select multiple="multiple" class="hidden multiselect__hidden" data-multiselect-target="hidden" name="pay_rate[language_ids][]" id="pay_rate_language_ids" style="display: none;"></select>
+                </div>
+              </div>
+            </div>
+
+            <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
+              <div class="mt-1 lg:col-span-1 sm:col-span-2 sm:mt-0">
+                <h3 class="text-base font-semibold leading-6 text-tokanisecondary-700">Apply Rate to Interpreters*</h3>
+                <dt class="text-sm font-medium text-gray-500">Select which of your interpreters will use this rate.</dt>
+              </div>
+              <div class="mt-1 pr-4 lg:col-span-2 sm:col-span-2 sm:mt-0 pl-0">
+                <div data-controller="multiselect" data-multiselect-items-value='<%= @interpreters_json %>' data-placeholder="Select Interpreters for this Pay Rate" class="">
+                  <select multiple="multiple" class="hidden multiselect__hidden" data-multiselect-target="hidden" name="pay_rate[interpreter_ids][]" id="pay_rate_interpreter_ids" style="display: none;"></select>
+                </div>
+              </div>
+            </div>
+            
+          
+  
+          </div>
+            <div class="bg-gray-50 mt-4 px-4 py-3 text-right sm:px-6">
+                <%= form.button button_text(form.send(:submit_default_value)), class:"inline-flex justify-center rounded-md border border-transparent bg-tokanisecondary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
+                <% if form.object.new_record? %>
+                    <%= link_to t("cancel"), pay_rates_path, class:"inline-flex justify-center rounded-md border border-transparent bg-tokaniprimary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
+                <% else %>
+                    <%= link_to t("cancel"), pay_rate_path(@pay_rate), class: "btn btn-white" %>
+                <% end %>
+            </div>
+          </div>
+        </div>
+  <% end %>
+
+
