--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -8,10 +8,11 @@
         <div class="mx-auto max-w-7xl px-4 sm:px-6 md:px-6">
           <div class="px-4 sm:px-6 lg:px-8">
 
-            <!-- Overview -->
-            <h2 class="text-lg font-medium leading-6 text-gray-900">Overview</h2>
             
             <% if customer_logged_in? %>
+              <!-- Overview -->
+              <h2 class="text-lg font-medium leading-6 text-gray-900">Overview</h2>
+              
               <div class="mt-2 grid grid-cols-1 gap-5 sm:grid-cols-2 lg:grid-cols-3 mb-8">
                 <!-- Card -->
                 <div class="overflow-hidden rounded-lg bg-white shadow">
@@ -35,7 +36,7 @@
                   </div>
                   <div class="bg-gray-50 px-5 py-3">
                     <div class="text-sm">
-                      <a href="<%= appointments_path %>" class="font-medium text-cyan-700 hover:text-cyan-900">View all</a>
+                      <a href="<%= appointments_path %>" class="font-medium text-cyan-700 hover:text-cyan-900 p-2">View all</a>
                     </div>
                   </div>
                 </div>
@@ -61,7 +62,7 @@
                   </div>
                   <div class="bg-gray-50 px-5 py-3">
                     <div class="text-sm">
-                      <a href="<%= appointments_path(status: 'scheduled') %>" class="font-medium text-cyan-700 hover:text-cyan-900">View all</a>
+                      <a href="<%= appointments_path(status: 'scheduled') %>" class="font-medium text-cyan-700 hover:text-cyan-900 p-2">View all</a>
                     </div>
                   </div>
                 </div>
@@ -87,7 +88,7 @@
                   </div>
                   <div class="bg-gray-50 px-5 py-3">
                     <div class="text-sm">
-                      <a href="<%= appointments_path(status: 'finished') %>" class="font-medium text-cyan-700 hover:text-cyan-900">View all</a>
+                      <a href="<%= appointments_path(status: 'finished') %>" class="font-medium text-cyan-700 hover:text-cyan-900 p-2">View all</a>
                     </div>
                   </div>
                 </div>
