--- a/app/views/dashboard/_customer.html.erb
+++ b/app/views/dashboard/_customer.html.erb
@@ -1,11 +1,32 @@
+<!--
+  This example requires some changes to your config:
+  
+  ```
+  // tailwind.config.js
+  module.exports = {
+    // ...
+    plugins: [
+      // ...
+      require('@tailwindcss/forms'),
+    ],
+  }
+  ```
+-->
+<!--
+  This example requires updating your template:
+
+  ```
+  <html class="h-full bg-gray-100">
+  <body class="h-full">
+  ```
+-->
 <% content_for :sidenav do %><% end %>
+
 <div>
-<%= render partial: "shared/sidenav" %>
-  <div class="min-h-full">
-    <div class="flex flex-1 flex-col lg:pl-64">
-      <main class="flex-1 pb-8">
-        <!-- Page header -->
-        <div class="mt-8">
+  <%= render partial: "shared/sidenav" %>
+  <div class="flex flex-1 flex-col md:pl-64">
+    <main class="flex-1">
+      <div class="mt-8">
           <div class="mx-auto max-w-6xl px-4 sm:px-6 lg:px-8">
             <h2 class="text-lg font-medium leading-6 text-gray-900">Overview</h2>
             <div class="mt-2 grid grid-cols-1 gap-5 sm:grid-cols-2 lg:grid-cols-3">
@@ -191,7 +212,6 @@
             </div>
           <% end %>
         </div>
-      </main>
-    </div>
+    </main>
   </div>
 </div>
