--- a/app/views/pay_rates/edit.html.erb
+++ b/app/views/pay_rates/edit.html.erb
@@ -1,16 +1,28 @@
 <%= content_for :title, t("shared.scaffold.edit.title", model: "Pay Rate") %>
 
-<div class="container mx-auto px-4 my-8">
-  <div class="flex items-center justify-between mb-4">
-    <h1 class="h3">
-      <%= link_to "Pay Rates", pay_rates_path, class: "text-black" %>
-      <span class="text-gray-400 font-light mx-2">\</span>
-      <%= t("shared.scaffold.edit.title", model: "Pay Rate") %>
-    </h1>
-    <%= button_to t("delete"), @pay_rate, method: :delete, class: "btn btn-white", form: { data: { turbo_confirm: t("are_you_sure") } } %>
-  </div>
+<div class="flex flex-1 flex-col md:pl-64">
+  <main class="flex-1">
+    <div class="py-6">
+      <div class="mx-auto max-w-7xl px-4 sm:px-6 md:px-8">
+          <div class="px-4 sm:px-6 lg:px-8">
+            <div class="sm:flex sm:items-center pb-6">
+                <div class="sm:flex-auto"> 
+                  <h1 class="text-xl font-semibold text-gray-900">
+                    <%= link_to "Pay Rates", pay_rates_path, class: "text-tokanisecondary-500" %>
+                      <span class="text-gray-400 font-light mx-2">\</span>
+                      <%= @pay_rate.name %>
+                  </h1>
+                </div>
+                 
+                </div>
+          
 
-  <div class="p-8 bg-white rounded shadow">
-    <%= render "form", pay_rate: @pay_rate %>
-  </div>
+                <div class="p-8 bg-white rounded shadow">
+                  <%= render "form", pay_rate: @pay_rate %>
+                 
+                </div>
+            </div>
+          </div>
+        </div>
+  </main>
 </div>
