--- a/app/views/pay_rates/show.html.erb
+++ b/app/views/pay_rates/show.html.erb
@@ -1,17 +1,34 @@
 <%= content_for :title, "Pay Rates ##{@pay_rate.id}" %>
 <%= turbo_stream_from @pay_rate %>
 
-<div class="container px-4 mx-auto my-8">
-  <div class="flex items-center justify-between mb-4">
-    <h1 class="h3">
-      <%= link_to "Pay Rates", pay_rates_path, class: "text-black" %>
-      <span class="text-gray-400 font-light mx-2">\</span>
-      Pay Rate #<%= @pay_rate.id %>
-    </h1>
-    <%= link_to t("edit"), edit_pay_rate_path(@pay_rate), class: "btn btn-white" %>
-  </div>
+<div class="flex flex-1 flex-col md:pl-64">
+  <main class="flex-1">
+    <div class="py-6">
+      <div class="mx-auto max-w-7xl px-4 sm:px-6 md:px-8">
+          <div class="px-4 sm:px-6 lg:px-8">
+            <div class="sm:flex sm:items-center pb-6">
+                <div class="sm:flex-auto"> 
+                  <h1 class="text-xl font-semibold text-gray-900">
+                    <%= link_to "Pay Rates", pay_rates_path, class: "text-tokanisecondary-500" %>
+                      <span class="text-gray-400 font-light mx-2">\</span>
+                      <%= @pay_rate.name %>
+                  </h1>
+                </div>
+                  <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none">
+                    <%= link_to t("edit"), edit_pay_rate_path(@pay_rate), class: "btn btn-tokani_purple" %>
+                  </div>
+                </div>
+          
 
-  <div class="p-8 bg-white rounded shadow">
-    <%= render @pay_rate %>
-  </div>
+                <div class="p-8 bg-white rounded shadow">
+                  <%# render partial: 'pay_rate', locals: { pay_rate: @pay_rate, interpreters: @interpreters } %>
+                  <%= render partial: 'pay_rate', locals: { pay_rate: @pay_rate } %>
+                  <%# render @pay_rate %>
+                </div>
+            </div>
+          </div>
+        </div>
+  </main>
 </div>
+
+
