--- a/app/views/bill_rates/new.html.erb
+++ b/app/views/bill_rates/new.html.erb
@@ -7,7 +7,7 @@
             <div class="sm:flex sm:items-center pb-6">
                 <div class="sm:flex-auto"> 
                   <h1 class="text-xl font-semibold text-gray-900">
-                    <%= link_to "Bill Rates", pay_bill_rates_path, class: "text-tokanisecondary-500" %>
+                    <%= link_to "Bill Rates", bill_rates_path, class: "text-tokanisecondary-500" %>
                       <span class="text-gray-400 font-light mx-2">\ New Pay Bill Rate</span>    
                   </h1>
                 </div>      
